--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Exercise 6: Analysis of real data  (score 30 points)\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -42,37 +44,37 @@
     "})\n",
     "\n",
     "#%matplotlib"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Global variables"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SEED_VALUE = np.random.seed(4155)\n",
     " # Random seed to guarantee reproducibility\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Reading and plotting terrain data"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the terrain\n",
     "terrain1_file = \"SRTM_data_Norway_1.tif\"\n",
@@ -91,42 +93,42 @@
     "plt.savefig(f\"{REPORT_FIGURES}{EX6}terrain_data.pdf\")\n",
     "plt.show()\n",
     "print(terrain1.shape)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Thoughts on the topographical data\n",
     "Before we proceed with this exercise, we want to briefly discuss the nature of this terrain data compared to the generated frank function. We regard the franke function as generic because it is known and its behavior or shape can be generated for other values of x and y. Thus, creating a model that can generalize the function even with added noise for other unknown data points for x and y makes sense. However, we are uncertain if this idea of generalization is transferable to topographical terrain data in the same sense. The terrain data given is unique, and its shape cannot be generalized for unknown data points. If the purpose is to create the absolute best fit for the specific and unique terrain data, one could simply overfit to the terrain data by having an extremely high degree when fitting a model, and that is not really ML. One could probably argue that a model should tackle added noise on the terrain data and still be able to represent the shapes and contours incorporated in the image. However, images are what they are, and in this case, the topographical terrain \"is what it is.\"  With that being said, we proceed with this exercise in the same spirit as done for exercises 1-5 even though we question this use case when working on this kind of real data."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.0. Terrain data - Preprocessing and transformation\n",
     "Least Square regression is not designed to tackle images directly. Thus, we must first transform the terrain data by slicing it into several bits and pieces. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.0.1 Resizeing the terrain image\n",
     "For computational purpose, we resize the terrain image to have a resonable amount of datapoints for our least sqaure models."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rescale_factor = 0.1\n",
     "ySize = int(terrain1.shape[0] * rescale_factor); print(ySize)\n",
@@ -145,27 +147,27 @@
     "plt.savefig(f\"{REPORT_FIGURES}{EX6}terrain_data_resized.pdf\")\n",
     "plt.show()\n",
     "print(terrain1[0,0])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.0.2 Creating image patches and Terrain data selection"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Methods"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def create_img_patches(img, ySteps, xSteps):\n",
     "    patches = []\n",
@@ -221,13 +223,13 @@
     "    if includeMeshgrid:\n",
     "        x, y = np.meshgrid(x,y)\n",
     "    return x,y,z\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "nXpatches = 3; nYpatches=6\n",
     "y_steps = int(terrain2Resized.shape[0] / nYpatches); print(y_steps)\n",
@@ -241,33 +243,33 @@
     "\n",
     "# test\n",
     "#img_reconstructed = patches_to_img(patches, y_steps, x_steps, nYpatches, nXpatches, plotImage=True)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.0.3 Choosing of terrain patch and data creation\n",
     "We look at the terrain data patches and choose which to create a fit for"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "img1 = patches_1[2]\n",
     "img2 = patches_2[5]\n",
     "x1, y1, z1 = createTerrainData(img1)\n",
     "x2, y2, z2 = createTerrainData(img2)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "scaler1 = MinMaxScaler()\n",
     "scaler1.fit(img1)\n",
@@ -313,22 +315,22 @@
     "ax2.plot_surface(x2, y2, z2, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX6}terrain_patch_to_fit_3D.pdf\")\n",
     "plt.show()\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.0.4 Base input data for all exercises\n",
     "We construct the data for least square regression based on preprocessed data. We also set up variables that will be used throughout the exercise.<br>\n",
     "Terrain patch from terrain 1 is used as input for our models and our tests "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "terrain_data = 1\n",
     "\n",
@@ -345,28 +347,28 @@
     "    z = z2\n",
     "    \n",
     "z_flat = z.ravel(); z_flat = z_flat.reshape(-1,1)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.1 OLS on data (Exercise1)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Running OLS fit on the data as done in EX1 \n",
     "Note that we exlude the calculation of CL for betas, since it is emedded within the model itself. See common.py for that code"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "z_train_OLS = pd.DataFrame()\n",
     "z_hat_train_OLS = pd.DataFrame()\n",
@@ -442,20 +444,20 @@
     "plt.title(\"Exercise 6.1 - Model evaluation\")\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX6_1}OLS_evaluattion.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Looking at $\\beta$ values"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "optimal_degree = 5\n",
     "df_degree = df[df[\"degree\"] == optimal_degree]\n",
@@ -466,20 +468,20 @@
     "fig = plot_beta_errors(df_degree, optimal_degree)\n",
     "fig.savefig(f\"{REPORT_FIGURES}{EX6_1}OLS_beta_error_degree{optimal_degree}.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Plotting predicted terrain using fitted degrees"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "degrees_insight = [4,5,17]\n",
     "z_hats = [z]\n",
@@ -535,65 +537,65 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX6_1}target_terrain_and_OLS_prediction_3D.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Comments on the OLS fit to terrain data:\n",
     "We scale the data since x, y, z is they are not between 0 to 1. Degree of 4 seems to yeild the best performance when fitting to the choosen terrain data."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# TODO:\n",
     "#### This text may have to be adjusted\n",
     "A degree of 4 or 5 seems to give a smooth surface for all the predicted patches. We find that the distortion and noise increase in the predicted image when the degree increases above 4-5 considering all patches. At higher degrees, some artifacts within the predicted patches also appear. In the predicted image with all patches, one can see some of the contours of the topographic structures in the image we try to approximate. However, the predicted image that is reconstructed from all the predicted patches is not very accurate. The task of this kind of problem is too complex for an OLS to manage. It may be that having smaller patches would increase the accuracy in reproducing the details incorporated in the input image. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.2 Bias-variance trade-off and resampling techniques on terrain data (Exercise2)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.2.1 Exercise 2"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.3 Cross-validation as resampling techniques, adding more complexity (Exercise3)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.4.1 Exercise 3"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for degree in range(1,20):\n",
     "    X = create_X(x,y,degree)\n",
@@ -624,62 +626,62 @@
     "    plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_boot{degree}.pdf\")\n",
     "\n",
     "    plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.4 Ridge Regression on the Franke function with resampling (Exercise4)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.4.1 Exercise 4"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.5. Lasso Regression on the Franke function with resampling (Exercise5)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6.5.1 Exercise 5"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 6.6 Extras"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# This cell is used to evaluate best degree for all patches\n",
     "n_xpatches = 9; n_ypatches=18\n",
@@ -766,21 +768,21 @@
     "        plt.legend()\n",
     "        plt.title(\"Exercise 6.1 - Model evaluation\")\n",
     "        plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# OLS fit on the whole terrain1 data\n",
     "Using degree 8 for all models for alle patches"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "n_xpatches = 9; n_ypatches=18\n",
     "y_steps = int(terrain1Resized.shape[0] / n_ypatches); print(y_steps)\n",
@@ -851,20 +853,20 @@
     "surf2 = ax2.imshow(terrain1_predicted, cmap='gray')\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX6}terrain_OLS_pred_all_patches_at_degree{degree}.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Trying to overfit to terrain for all patches"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "testDegree = 150\n",
@@ -892,20 +894,20 @@
     "surf2 = ax2.imshow(terrain1_predicted, cmap='gray')\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX6_1}terrain_and_all_patches_predicted_at_degree{testDegree}.pdf\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Tests of dimensions image reduction and patches"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "i = 1\n",
     "value = 180\n",
@@ -915,13 +917,13 @@
     "        print(f\"value:{value / i} at i:{i}\")\n",
     "    if(i>=value):\n",
     "        break"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "i = 1\n",
     "value = 360\n",
@@ -931,9 +933,7 @@
     "        print(f\"value:{value / i} at i:{i}\")\n",
     "    if(i>=value):\n",
     "        break"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -941,8 +941,9 @@
    "hash": "9c543d25d076d866156e6f2c445c66d614286218a5e81464998dcfdeffc50581"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.11 64-bit ('fysstk_env': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -954,9 +955,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.8"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
