--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degrees_insight = [4,5,17]\n",
+    "degrees_insight = [5,9,10]\n",
     "z_hats = [z]\n",
     "for deg in degrees_insight:\n",
     "    X = create_X(x, y, deg) # Design Matrix \n",
@@ -597,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for degree in range(1,20):\n",
+    "for degree in range(8,13):\n",
     "    X = create_X(x,y,degree)\n",
     "    #remove intercept: \n",
     "    X = X[:,1:]\n",
@@ -619,7 +619,7 @@
     "    plt.title(f\"Model complexity: {degree} degrees\")\n",
     "    plt.xlabel(\"K-fold\")\n",
     "    plt.ylabel(\"MSE\")\n",
-    "    #plt.ylim(0,2)\n",
+    "    plt.ylim(0.15,0.3)\n",
     "    plt.xticks(np.arange(5,11))\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
@@ -647,64 +647,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
    "source": []
-=======
-   "source": [
-    "#np.random.seed(4155)\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "degree = 8\n",
-    "min_lambda = -9\n",
-    "max_lambda = 4\n",
-    "nlambdas = 500\n",
-    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
-    "\n",
-    "z_train_OLS = pd.DataFrame()\n",
-    "z_hat_train_OLS = pd.DataFrame()\n",
-    "z_test_OLS = pd.DataFrame()\n",
-    "z_hat_test_OLS = pd.DataFrame()\n",
-    "\n",
-    "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,z_flat, 4155, scale_X=True, scale_t=True)\n",
-    "\n",
-    "MSERidgePredict = np.zeros(nlambdas)\n",
-    "MSEOurRidge = np.zeros(nlambdas)\n",
-    "MSEsklearn = np.zeros(nlambdas)\n",
-    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
-    "for i in range(nlambdas):\n",
-    "    lmb = lambdas[i]\n",
-    "\n",
-    "    # our Ridge\n",
-    "    model = RidgeRegression(lmb)\n",
-    "    z_hat_train = model.fit(X_train, t_train)\n",
-    "    z_hat_test = model.predict(X_test)\n",
-    "    MSEOurRidge[i] = MSE(t_test, z_hat_test)\n",
-    "    MSEsklearn[i] = mean_squared_error(t_test, z_hat_test)\n",
-    "\n",
-    "    summary_df = model.summary()\n",
-    "    df = pd.concat([df,summary_df], axis=0)\n",
-    "\n",
-    "    z_train_OLS[i] = z_train.flatten()\n",
-    "    z_hat_train_OLS[i] = z_hat_train.flatten()\n",
-    "    z_test_OLS[i] = z_test.flatten()\n",
-    "    z_hat_test_OLS[i] = z_hat_test.flatten()\n",
-    "\n",
-    "    # Storing data for all degrees\n",
-    "    results = {\"X_train\":X_train, \"X_test\":X_test,\"z_train\":z_train, \"z_test\":z_test,\n",
-    "               \"z_hat_train\":z_hat_train, \"z_hat_test\":z_hat_test, \"model\":model, \"summary\":summary_df}\n",
-    "\n",
-    "# MSE calculations for all lambdas\n",
-    "#mse_scores_train = ((z_train_OLS - z_hat_train_OLS) ** 2).mean()\n",
-    "#mse_scores_test = ((z_test_OLS - z_hat_test_OLS) ** 2).mean()\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(np.log10(lambdas), MSEsklearn, 'm', label = \"MSE Ridge\")\n",
-    "plt.xlabel('log10(lambda)')\n",
-    "plt.ylabel('MSE')\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
->>>>>>> 0d6284bcba8396f0cb69cd0326e3c1447badf6d1
   },
   {
    "cell_type": "markdown",
@@ -750,7 +693,6 @@
     "\n",
     "\n",
     "\n",
-    "np.random.seed(SEED_VALUE) \n",
     "z_flat = z.ravel(); z_flat = z_flat.reshape(-1,1)\n",
     "z_train_OLS = pd.DataFrame()\n",
     "z_hat_train_OLS = pd.DataFrame()\n",
@@ -848,7 +790,6 @@
     "patches_1_test = create_img_patches(terrain1Resized, y_steps, x_steps)\n",
     "#plotTerrainPatches(patches_1_test, n_ypatches, n_xpatches, plotTitle=\"Terrain1 patches\")\n",
     "\n",
-    "np.random.seed(SEED_VALUE) \n",
     "z_flat = z.ravel(); z_flat = z_flat.reshape(-1,1)\n",
     "z_train_OLS = pd.DataFrame()\n",
     "z_hat_train_OLS = pd.DataFrame()\n",
@@ -998,8 +939,7 @@
    "hash": "9c543d25d076d866156e6f2c445c66d614286218a5e81464998dcfdeffc50581"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.11 64-bit ('fysstk_env': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1012,8 +952,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
+   "version": "3.7.11"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
