--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degrees_insight = [4,5,17]\n",
+    "degrees_insight = [8,10,12]\n",
     "z_hats = [z]\n",
     "for deg in degrees_insight:\n",
     "    X = create_X(x, y, deg) # Design Matrix \n",
@@ -610,20 +610,20 @@
     "    for folds in range(5,11):\n",
     "        \n",
     "\n",
-    "        implemented_scores = cross_val_ex6(k = folds, model = \"OLS\", X = X, z = z, degree=degree, shuffle=True)\n",
+    "        implemented_scores = cross_val_ex6(k = folds, model = \"OLS\", X = X, z = z, degree=degree, shuffle=True, random_state = SEED_VALUE)\n",
     "        mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
     "        mse_std_arr[folds-5] = np.std(implemented_scores)\n",
     "\n",
-    "    plt.plot(np.arange(5,11), mean_folds_error, \"o--\",  label = \"Mean MSE CV\")\n",
+    "    plt.plot(np.arange(5,11), mean_folds_error, \"o--\",  label = f\"Mean MSE, degree {degree}\")\n",
     "    plt.fill_between(np.arange(5,11), mean_folds_error-mse_std_arr, mean_folds_error+mse_std_arr,  alpha = 0.2)\n",
-    "    plt.title(f\"Model complexity: {degree} degrees\")\n",
+    "    plt.title(f\"MSE Comparison\")\n",
     "    plt.xlabel(\"K-fold\")\n",
     "    plt.ylabel(\"MSE\")\n",
     "    #plt.ylim(0,2)\n",
     "    plt.xticks(np.arange(5,11))\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
-    "    plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_boot{degree}.pdf\")\n",
+    "    plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{degree}.pdf\")\n",
     "\n",
     "    plt.show()"
    ]
@@ -650,16 +650,12 @@
    "source": [
     "#np.random.seed(4155)\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "degree = 8\n",
+    "degree = 10\n",
     "min_lambda = -9\n",
     "max_lambda = 4\n",
     "nlambdas = 500\n",
     "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
     "\n",
-    "z_train_OLS = pd.DataFrame()\n",
-    "z_hat_train_OLS = pd.DataFrame()\n",
-    "z_test_OLS = pd.DataFrame()\n",
-    "z_hat_test_OLS = pd.DataFrame()\n",
     "\n",
     "X = create_X(x,y,degree)\n",
     "X_train, X_test, t_train, t_test = prepare_data(X,z_flat, 4155, scale_X=True, scale_t=True)\n",
@@ -678,13 +674,7 @@
     "    MSEOurRidge[i] = MSE(t_test, z_hat_test)\n",
     "    MSEsklearn[i] = mean_squared_error(t_test, z_hat_test)\n",
     "\n",
-    "    summary_df = model.summary()\n",
-    "    df = pd.concat([df,summary_df], axis=0)\n",
-    "\n",
-    "    z_train_OLS[i] = z_train.flatten()\n",
-    "    z_hat_train_OLS[i] = z_hat_train.flatten()\n",
-    "    z_test_OLS[i] = z_test.flatten()\n",
-    "    z_hat_test_OLS[i] = z_hat_test.flatten()\n",
+    " \n",
     "\n",
     "    # Storing data for all degrees\n",
     "    results = {\"X_train\":X_train, \"X_test\":X_test,\"z_train\":z_train, \"z_test\":z_test,\n",
@@ -698,6 +688,7 @@
     "plt.plot(np.log10(lambdas), MSEsklearn, 'm', label = \"MSE Ridge\")\n",
     "plt.xlabel('log10(lambda)')\n",
     "plt.ylabel('MSE')\n",
+    "plt.grid(True)\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -991,7 +982,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "9c543d25d076d866156e6f2c445c66d614286218a5e81464998dcfdeffc50581"
+   "hash": "832cabf0b499e02e4a9db3c43ba66016f6fa525bd81e8a60b86973ed3d4bb657"
   },
   "kernelspec": {
    "display_name": "Python 3.7.11 64-bit ('fysstk_env': conda)",
