--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -34,7 +34,7 @@
     "from typing import Tuple\n",
     "\n",
     "\n",
-    "print(f\"Root directory: {os.getcwd()}\")\n",
+    "print(f\"Root directory: {os.ge+tcwd()}\")\n",
     "\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
@@ -597,7 +597,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for degree in range(1,20):\n",
+    "\n",
+    "for degree in range(9,12):\n",
     "    X = create_X(x,y,degree)\n",
     "    #remove intercept: \n",
     "    X = X[:,1:]\n",
@@ -623,10 +624,54 @@
     "    plt.xticks(np.arange(5,11))\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
-    "    plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{degree}.pdf\")\n",
+    "    #plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{degree}.pdf\")\n",
     "\n",
-    "    plt.show()"
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "k_fold = 10\n",
+    "degree_count = 0 \n",
+    "mean_mse =  np.zeros(3)\n",
+    "mse_std_arr = np.zeros_like(mean_mse)\n",
+    "\n",
+    "for degree in (8,9,10):\n",
+    "    X = create_X(x,y,degree)\n",
+    "    #remove intercept: \n",
+    "    X = X[:,1:]\n",
+    "\n",
+    "    implemented_scores = cross_val_ex6(k = k_fold, model = \"OLS\", X = X, z = z, degree=degree, shuffle=True, random_state = SEED_VALUE)\n",
+    "    mean_mse[degree_count]= np.mean(implemented_scores)\n",
+    "    mse_std_arr[degree_count]= np.std(implemented_scores)\n",
+    "    degree_count +=1\n",
+    "\n",
+    "plt.plot(np.arange(8,11), mean_mse, \"o--\",  label = f\"Mean MSE,{k_fold}-fold\")\n",
+    "plt.fill_between(np.arange(8,11), mean_mse-mse_std_arr, mean_mse+mse_std_arr,  alpha = 0.2)\n",
+    "\n",
+    "plt.title(f\"MSE Comparison\")\n",
+    "plt.xlabel(\"Model complexity\")\n",
+    "plt.ylabel(\"MSE\")\n",
+    "#plt.ylim(0,2)\n",
+    "plt.xticks(np.arange(8,11))\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{k_fold}_fold.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -694,6 +739,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ridge with cross-validatation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "degree = 10\n",
+    "min_lambda = -9\n",
+    "max_lambda = 4\n",
+    "nlambdas = 10\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
+    "k_fold = 10\n",
+    "\n",
+    "X = create_X(x,y,degree)\n",
+    "#remove intercept: \n",
+    "X = X[:,1:]\n",
+    "mean_mse = np.zeros(nlambdas)\n",
+    "mse_std_arr = np.zeros_like(mean_mse)\n",
+    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
+    "for i in range(nlambdas):\n",
+    "    lmb = lambdas[i]\n",
+    "    \n",
+    "    implemented_scores = cross_val_ex6(k = k_fold, model = \"Ridge\", X = X, z = z, degree=degree,lmb=lmb, shuffle=True, random_state = SEED_VALUE)\n",
+    "    mean_mse[i]= np.mean(implemented_scores)\n",
+    "    mse_std_arr[i]= np.std(implemented_scores)\n",
+    "\n",
+    "plt.plot(np.linspace(min_lambda,max_lambda,nlambdas), mean_mse, \"o--\",  label = f\"Mean MSE,{k_fold}-fold\")\n",
+    "plt.fill_between(np.linspace(min_lambda,max_lambda,nlambdas), mean_mse-mse_std_arr, mean_mse+mse_std_arr,  alpha = 0.2)\n",
+    "\n",
+    "plt.title(f\"Estimated Cross-val MSE for Ridge at degree {degree}\")\n",
+    "plt.xlabel(\"'log10(lambda)'\")\n",
+    "plt.ylabel(\"MSE\")\n",
+    "#plt.ylim(0,2)\n",
+    "#plt.xticks(np.logspace(min_lambda,max_lambda,nlambdas))\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{k_fold}_fold.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -733,11 +826,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross-Validation with Lasso: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "degree = 30\n",
+    "min_lambda = -9\n",
+    "max_lambda = 4\n",
+    "nlambdas = 20\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
+    "\n",
+    "\n",
+    "X = create_X(x,y,degree)\n",
+    "#remove intercept: \n",
+    "X = X[:,1:]\n",
+    "mean_mse = np.zeros(nlambdas)\n",
+    "mse_std_arr = np.zeros_like(mean_mse)\n",
+    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
+    "for i in range(nlambdas):\n",
+    "    lmb = lambdas[i]\n",
+    "    \n",
+    "    implemented_scores = cross_val_ex6(k = k_fold, model = \"Lasso\", X = X, z = z, degree=degree,lmb=lmb, shuffle=True, random_state = SEED_VALUE)\n",
+    "    mean_mse[i]= np.mean(implemented_scores)\n",
+    "    mse_std_arr[i]= np.std(implemented_scores)\n",
+    "\n",
+    "plt.plot(np.linspace(min_lambda,max_lambda,nlambdas), mean_mse, \"o--\",  label = f\"Mean MSE,{k_fold}-fold\")\n",
+    "plt.fill_between(np.linspace(min_lambda,max_lambda,nlambdas), mean_mse-mse_std_arr, mean_mse+mse_std_arr,  alpha = 0.2)\n",
+    "\n",
+    "plt.title(f\"Estimated Cross-val MSE for Lasso at degree {degree}\")\n",
+    "plt.xlabel(\"'log10(lambda)'\")\n",
+    "plt.ylabel(\"MSE\")\n",
+    "#plt.ylim(0,2)\n",
+    "#plt.xticks(np.logspace(min_lambda,max_lambda,nlambdas))\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{k_fold}_fold.pdf\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1007,10 +1141,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "832cabf0b499e02e4a9db3c43ba66016f6fa525bd81e8a60b86973ed3d4bb657"
+   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('fysstk_env': conda)",
+   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1023,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
