--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -34,7 +34,7 @@
     "from typing import Tuple\n",
     "\n",
     "\n",
-    "print(f\"Root directory: {os.ge+tcwd()}\")\n",
+    "print(f\"Root directory: {os.getcwd()}\")\n",
     "\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
@@ -43,7 +43,7 @@
     "    \"font.size\": 10,\n",
     "})\n",
     "\n",
-    "#%matplotlib"
+    "%matplotlib inline"
    ]
   },
   {
@@ -597,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "%matplotlib inline\n",
     "for degree in range(9,12):\n",
     "    X = create_X(x,y,degree)\n",
     "    #remove intercept: \n",
@@ -638,32 +638,33 @@
     "\n",
     "\n",
     "k_fold = 10\n",
-    "degree_count = 0 \n",
-    "mean_mse =  np.zeros(3)\n",
-    "mse_std_arr = np.zeros_like(mean_mse)\n",
-    "\n",
-    "for degree in (8,9,10):\n",
+    "data = []\n",
+    "for degree in range(8,11):\n",
     "    X = create_X(x,y,degree)\n",
     "    #remove intercept: \n",
     "    X = X[:,1:]\n",
     "\n",
-    "    implemented_scores = cross_val_ex6(k = k_fold, model = \"OLS\", X = X, z = z, degree=degree, shuffle=True, random_state = SEED_VALUE)\n",
-    "    mean_mse[degree_count]= np.mean(implemented_scores)\n",
-    "    mse_std_arr[degree_count]= np.std(implemented_scores)\n",
-    "    degree_count +=1\n",
+    "    data.append(cross_val_ex6(k = k_fold, model = \"OLS\", X = X, z = z, degree=degree, shuffle=True, random_state = SEED_VALUE))\n",
     "\n",
-    "plt.plot(np.arange(8,11), mean_mse, \"o--\",  label = f\"Mean MSE,{k_fold}-fold\")\n",
-    "plt.fill_between(np.arange(8,11), mean_mse-mse_std_arr, mean_mse+mse_std_arr,  alpha = 0.2)\n",
     "\n",
-    "plt.title(f\"MSE Comparison\")\n",
-    "plt.xlabel(\"Model complexity\")\n",
-    "plt.ylabel(\"MSE\")\n",
-    "#plt.ylim(0,2)\n",
-    "plt.xticks(np.arange(8,11))\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_{k_fold}_fold.pdf\")\n",
-    "plt.show()"
+    "fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "ax1.yaxis.grid(True, linestyle='-', which='major', color='lightgrey',\n",
+    "               alpha=0.5)\n",
+    "ax1.set(\n",
+    "    axisbelow=True,  # Hide the grid behind plot objects\n",
+    "    title=f'Cross-Validation MSE Comparison at {k_fold}-Fold',\n",
+    "    xlabel='Model Comlexity',\n",
+    "    ylabel='MSE',\n",
+    ")\n",
+    "\n",
+    "\n",
+    "ax1.set_xticklabels((\"degree 8\",\"Degree 9\",\"Degree 10\"),\n",
+    "                    rotation=45, fontsize=10)\n",
+    "ax1.boxplot(data)\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX6}cv_boxplot_{k_fold}_fold.pdf\")\n",
+    "\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
