added some lasso

--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -29,6 +29,9 @@
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "import sklearn.linear_model as lm\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from warnings import simplefilter\n",
+    "from sklearn.exceptions import ConvergenceWarning\n",
+    "simplefilter(\"ignore\", category=ConvergenceWarning)\n",
     "\n",
     "print(f\"Root directory: {os.getcwd()}\")\n",
     "\n",
@@ -56,14 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(SEED_VALUE)\n",
+    "SEED = np.random.seed(4155)\n",
     "maxdegree = 12\n",
-    "degree = 6 # Chosen as the optimal degree from the bias-variance tentative\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
-    "X = create_X(x,y, n = degree)\n",
-    "z = FrankeFunction(x, y) + noise_factor(n, factor=0.2)"
+    "x,y = np.meshgrid(x,y)\n",
+    "t = FrankeFunction(x, y) + noise_factor(n, factor=0.2)\n",
+    "min_lambda = -9\n",
+    "max_lambda = 4\n",
+    "nlambdas = 100\n",
+    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)"
    ]
   },
   {
@@ -74,20 +80,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nbf_lambdas = 13\n",
-    "lambdas = np.logspace(-12, 1, nbf_lambdas)\n",
-    "z_train_lasso = pd.DataFrame()\n",
-    "z_hat_train_lasso = pd.DataFrame()\n",
-    "z_test_lasso = pd.DataFrame()\n",
-    "z_hat_test_lasso = pd.DataFrame()\n",
-    "\n",
-    "MSE_test = np.zeros(nbf_lambdas)\n",
-    "MSE_train = np.zeros(nbf_lambdas)"
+    "# Create a searchlandscape"
    ]
   },
   {
@@ -96,35 +92,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X = True, skip_intercept=True, random_state=SEED_VALUE)\n",
+    "test_mse = np.zeros((maxdegree, nlambdas))\n",
+    "train_mse = np.zeros_like(test_mse)\n",
+    "model_list = np.empty_like(test_mse, dtype=object)\n",
+    "optimal_deg = 0\n",
+    "optimal_lmb = 0\n",
+    "lambda_degree = 0\n",
+    "best_mse = np.inf\n",
     "\n",
-    "#X_train[:,0] = 1\n",
-    "#X_test[:,0] = 1\n",
+    "for deg in range(1, maxdegree+1):\n",
+    "    for lmb in range(len(lambdas)):\n",
     "\n",
-    "for i in tqdm(range(len(lambdas)), f\"Looping through lambdas up to {nbf_lambdas}: \"):\n",
-    "    clf = lm.Lasso(lambdas[i], fit_intercept=False)\n",
-    "    clf.fit(X_train, z_train)\n",
+    "        X = create_X(x,y,n=deg)\n",
     "\n",
-    "    z_pred = clf.predict(X_test)\n",
-    "    z_fit = clf.predict(X_train)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
     "\n",
-    "    MSE_test[i] = np.mean( np.mean((z_test - z_pred)**2) )\n",
-    "    MSE_train[i] = np.mean( np.mean((z_train - z_fit)**2) )\n",
+    "        model = lm.Lasso(lambdas[lmb], fit_intercept=False)\n",
+    "        model.fit(X_train, z_train)\n",
+    "        z_hat_train = model.predict(X_train)\n",
+    "        z_hat_test = model.predict(X_test)\n",
     "\n",
-    "plt.figure()\n",
-    "plt.plot(np.log10(lambdas), MSE_train, 'c', label = \"MSE train\")\n",
-    "plt.plot(np.log10(lambdas), MSE_test, 'm', label = 'MSE test')\n",
-    "plt.xlabel('log10(lambda)')\n",
-    "plt.ylabel('MSE')\n",
-    "plt.legend()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX5}LASSO_MSE_initial.pdf\")\n"
+    "        test_mse[deg-1,lmb] = MSE(z_test, z_hat_test)\n",
+    "        train_mse[deg-1, lmb] = MSE(z_train, z_hat_train)\n",
+    "        model_list[deg-1,lmb] = model\n",
+    "        \n",
+    "        if test_mse[deg-1,lmb] < best_mse:\n",
+    "            best_mse = test_mse[deg-1, lmb]\n",
+    "            optimal_deg = deg\n",
+    "            optimal_lmb = lambdas[lmb]\n",
+    "            lambda_degree = lmb\n",
+    "\n",
+    "print(best_mse)\n",
+    "print(optimal_lmb)\n",
+    "print(optimal_deg)\n",
+    "print(train_mse[deg-1, lmb])\n",
+    "optimal_model = model_list[deg-1, lambda_degree]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as mticker\n",
+    "%matplotlib\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.title.set_text(\"Plot of the Search Landscape\")\n",
+    "ax.set_xlabel(\"Polynomial degree\"); ax.set_ylabel(\"Lambda index\"); ax.set_zlabel(\"MSE\")\n",
+    "#ax.set_yticklabels(f\"{np.log10(lambdas[i])}\" for i in np.linspace(0,499,6,dtype=int))\n",
+    "ax.set_xticklabels(f\"{deg-2}\" for deg in range(1, maxdegree+2,2))\n",
+    "\n",
+    "degs, lambs = np.meshgrid(range(maxdegree), range(nlambdas))\n",
+    "print(degs.shape)\n",
+    "print(lambs.shape)\n",
+    "print(test_mse.shape)\n",
+    "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
+    "ax.view_init(elev=14., azim=-58.)\n",
+    "ax.scatter(optimal_deg - 1, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX5}search_landscape_lasso.pdf\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fitting the model for the different values of $\\lambda$"
+    "# Betaplot showing effect of L1 regularizer"
    ]
   },
   {
@@ -132,111 +166,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Preparing data and training the model\n",
-    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=SEED_VALUE)\n",
-    "\n",
-    "for lmb in lambdas:\n",
-    "    # Fitting the linear model\n",
-    "    model = lm.Lasso(lmb, fit_intercept=False)\n",
-    "    model.fit(X_train, z_train)\n",
-    "\n",
-    "    # Predicting values using the trained model\n",
-    "    z_hat_train = model.predict(X_train)\n",
-    "    z_hat_test = model.predict(X_test)\n",
-    "\n",
-    "    # Filling up the dataframes\n",
-    "    z_train_lasso[lmb] = z_train.flatten()\n",
-    "    z_hat_train_lasso[lmb] = z_hat_train.flatten()\n",
-    "    z_test_lasso[lmb] = z_test.flatten()\n",
-    "    z_hat_test_lasso[lmb] = z_hat_test.flatten()\n",
-    "\n",
-    "# Calculate the MSE for all lambda values\n",
-    "mse_scores_train = ((z_train_lasso - z_hat_train_lasso) ** 2).mean()\n",
-    "mse_scores_test = ((z_test_lasso - z_hat_test_lasso) ** 2).mean()\n",
-    "# R2 calculations for all lambda values\n",
-    "R2_scores_train = 1 - ((z_train_lasso - z_hat_train_lasso) ** 2).sum() / ((z_train_lasso - z_train_lasso.mean())**2).sum() \n",
-    "R2_scores_test = 1 - ((z_test_lasso - z_hat_test_lasso) ** 2).sum() / ((z_test_lasso - z_test_lasso.mean())**2).sum()  \n",
-    "\n"
+    "%matplotlib inline\n",
+    "for deg in range(1, maxdegree-3):     # Only want the first 8\n",
+    "    betas = []\n",
+    "    summaries_df = pd.DataFrame()\n",
+    "    for lmb in lambdas:\n",
+    "        X = create_X(x,y,n=deg)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
+    "        model = lm.Lasso(lmb, fit_intercept=False)\n",
+    "        model.fit(X_train, z_train)\n",
+    "        betas.append(model.get_params())\n",
+    "        \n",
+    "    #fig = plot_beta_errors_for_lambdas(summaries_df, deg)\n",
+    "    #plt.savefig(f\"{REPORT_FIGURES}{EX4}beta_plot_ridge_{deg}.pdf\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bootstrap\n",
-    "Performing the same bootstrap analysis as in Exercise 4, that is, for each lambda, loop over each degree whereas for each degree, bootstrapping is performed to generate a set of different predicted values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "nlambdas = 10\n",
-    "n_bootstraps = 100\n",
-    "maxdegree = 12\n",
-    "lambdas = np.logspace(-4, 1, nlambdas)\n",
-    "polydegree = np.arange(maxdegree)\n",
-    "\n",
-    "for lmb in lambdas:\n",
-    "    MSE_test = np.zeros(maxdegree)\n",
-    "    MSE_train = np.zeros(maxdegree)\n",
-    "    bias = np.zeros(maxdegree)\n",
-    "    variance = np.zeros(maxdegree)\n",
-    "\n",
-    "    for degree in tqdm(range(maxdegree), desc = f\"Looping through polynomials up to {maxdegree} degrees with {n_bootstraps} bootstraps: \"):\n",
-    "        model = lm.Lasso(lmb)\n",
-    "        X = create_X(x, y, n=degree)\n",
-    "        X_train, X_test, z_train, z_test = train_test_split(X, z, test_size=0.2)\n",
-    "\n",
-    "        z_test_ = np.reshape(z_test, newshape=(z_test.shape[0],1))\n",
-    "        z_train_ = np.reshape(z_train, newshape=(z_train.shape[0],1))\n",
-    "\n",
-    "        scaler = StandardScaler()\n",
-    "        scaler.fit(X_train)\n",
-    "        X_train_scaled = scaler.transform(X_train)\n",
-    "        X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "        z_pred = np.empty((z_test.shape[0], n_bootstraps))\n",
-    "        z_fit = np.empty((z_train.shape[0], n_bootstraps))\n",
-    "\n",
-    "        # Bootstrapping\n",
-    "        for i in range(n_bootstraps):\n",
-    "            x_, z_ = resample(X_train, z_train)\n",
-    "            clf = model.fit(x_, z_)\n",
-    "            z_pred[:, i] = clf.predict(X_test_scaled)\n",
-    "            z_fit[:, i] = clf.predict(X_train_scaled)\n",
-    "\n",
-    "        MSE_test[degree] = np.mean( np.mean((z_test_ - z_pred)**2, axis=1, keepdims=True) )\n",
-    "        MSE_train[degree] = np.mean( np.mean((z_train_ - z_fit)**2, axis=1, keepdims=True) )\n",
-    "        bias[degree] = np.mean( (z_test - np.mean(z_pred, axis=1, keepdims=True))**2 )\n",
-    "        variance[degree] = np.mean( np.var(z_pred, axis=1, keepdims=True))\n",
-    "\n",
-    "    plt.figure()\n",
-    "    plt.plot(polydegree, MSE_test,\"m\", label='MSE\\_test')\n",
-    "    plt.plot(polydegree, MSE_train,\"c\", label='MSE\\_train')\n",
-    "\n",
-    "    plt.plot(polydegree, bias,\"g--\", label='bias')\n",
-    "    plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
-    "\n",
-    "    plt.title(f\"Bias-Variance for log10(lambda) = {np.log10(lmb)}\")\n",
-    "    plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
-    "    plt.ylabel(\"Prediction Error\")\n",
-    "\n",
-    "    plt.grid(True)\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "\"\"\""
+    "# Cross Validation"
    ]
   }
  ],
@@ -245,7 +195,7 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -258,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
