--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -141,7 +141,7 @@
     "ax.title.set_text(\"Plot of the Search Landscape\")\n",
     "ax.set_xlabel(\"Polynomial degree\"); ax.set_ylabel(\"Lambda index\"); ax.set_zlabel(\"MSE\")\n",
     "#ax.set_yticklabels(f\"{np.log10(lambdas[i])}\" for i in np.linspace(0,499,6,dtype=int))\n",
-    "ax.set_xticklabels(f\"{deg-2}\" for deg in range(1, degree+3,2))\n",
+    "ax.set_xticklabels(f\"{deg-2}\" for deg in range(1, degree+2,2))\n",
     "\n",
     "degs, lambs = np.meshgrid(range(degree), range(nlambdas))\n",
     "print(degs.shape)\n",
@@ -149,7 +149,7 @@
     "print(test_mse.shape)\n",
     "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
     "ax.view_init(elev=14., azim=-58.)\n",
-    "ax.scatter(5, 0, best_mse, c='r', marker='o', s=100)\n",
+    "ax.scatter(optimal_deg, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
     "plt.savefig(f\"{REPORT_FIGURES}{EX4}search_landscape_ridge.pdf\")"
    ]
   },
@@ -399,10 +399,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
